# plutus

./: .gitignore  AGENTS.md  AGENTS_new.md  CLAUDE.md  README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  setup.py  setup.sh  tools.py
.agents/skills/analyze-cashflow/: SKILL.md
.agents/skills/cashflow/: SKILL.md
.agents/skills/fa-analyze-cashflow/: SKILL.md
.agents/skills/fa-expense-tracker/: SKILL.md
.agents/skills/fa-liability-tracker/: SKILL.md
.agents/skills/fa-net-worth/: SKILL.md
.agents/skills/fa-onboard/: SKILL.md
.agents/skills/liability-tracker/: SKILL.md
.agents/skills/net-worth/: SKILL.md
.agents/skills/net-worth-tracking/: SKILL.md
.agents/skills/onboard/: SKILL.md
.claude/skills/onboard/: SKILL.md
core/: expenses.py
hermes/: setup.py  setup.sh
mtool/: cli.py  constants.py  expenses.py  main.py  market.py  setup.py  splits.py  update.py
mtool/core/: db.py  expenses.py  market.py
mtool/db/: db.py  expenses.py  splits.py
mtool/harness/: hermes.py  skills.py
mtool/skills/fa-analyze-cashflow/: SKILL.md
mtool/skills/fa-email-receipts/: SKILL.md
mtool/skills/fa-expense-tracker/: SKILL.md
mtool/skills/fa-onboard/: SKILL.md
openclaw/: setup.py
plutus/: main.py  serve.py  setup.py
plutus/api/: expenses.py
plutus/web/: DESIGN.md  design-system.html  package-lock.json
plutus/web/src/: index.css
