[project]
name = "finance_agent"
version = "0.1.0"
description = "CLI built around finance_agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "pyperclip>=1.9.0",
    "questionary>=2.1.0",
    "typer>=0.24.0",
    "yfinance>=1.2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtool"]

[project.scripts]
mtool = "mtool.main:app"
