[project]
name = "finance_agent"
version = "0.7.0"
description = "Turn your agent into a personal finance assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=1.2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
