[project]
name = "plutus"
version = "0.7.0"
description = "CLI built around plutus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.0",
    "pyperclip>=1.9.0",
    "questionary>=2.1.0",
    "typer>=0.24.0",
    "uvicorn>=0.34.0",
    "yfinance>=1.2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plutus"]

[project.scripts]
plutus = "plutus.main:app"
